# option-pricing-horizon

./: .gitignore  01_european_black_scholes.ipynb  02_asian_geometric_exact.ipynb  03_asian_arithmetic_montecarlo.ipynb  04_greeks_sensitivity.ipynb  05_realworld_airline_hedging.ipynb  LICENSE  README.md  pyproject.toml
option_pricing_horizon/: __init__.py
option_pricing_horizon/asian/: __init__.py  convergence.py  geometric.py  greeks.py  monte_carlo.py  payoffs.py
option_pricing_horizon/common/: __init__.py  market_params.py  math_utils.py  simulation.py
option_pricing_horizon/european/: __init__.py  black_scholes.py  greeks.py
tests/: test_asian_geo.py  test_asian_mc.py  test_european.py
